data/all_generated_tests/raw_wast_tests/br_InfiniteLoops_479.wast
;; 10. **Test Description**: Develop a sequence of loops with different loop depths, each having a `br` targeting the next outer loop level correctly and an `if` statement with `br_if` for loop termination. Ensure structured control flow enforcements.    **Constraint**: Verifies structured control flow is maintained.    **Relation to Infinite Loops**: Violations in structured control flow may result in loops not terminating as intended, causing infinite loops.

(assert_invalid
  (module
    (func $test-nested-loops-with-br_if
      (loop $loop1 (result i32)
        (i32.const 1)
        (loop $loop2 (result i32)
          (i32.const 2)
          (loop $loop3 (result i32)
            (i32.const 3)
            (if (result i32) (i32.eqz (i32.const 0))
              (then (br 2))
            )
            (br 1)
          )
        )
      )
    )
  )
  "type mismatch"
)